--- a/pom.xml
+++ b/pom.xml
@@ -73,7 +73,7 @@
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <manifestEntries>
-                                        <Main-Class>org.jacpfx.image.canvas.ApplicationMain</Main-Class>
+                                        <Main-Class>org.jacpfx.image.canvas.ApplicationMainWithSelectionWindow</Main-Class>
                                         <X-Compile-Source-JDK>1.8</X-Compile-Source-JDK>
                                         <X-Compile-Target-JDK>1.8</X-Compile-Target-JDK>
                                     </manifestEntries>
