--- a/pom.xml
+++ b/pom.xml
@@ -34,6 +34,11 @@
             <version>3.8.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.guigarage</groupId>
+            <artifactId>flatter</artifactId>
+            <version>0.7</version>
+        </dependency>
     </dependencies>
     <build>
         <plugins>
